como pensar, se comportar e jogar

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<p>Por Pedro Henrique Frá<br><br>
 O “SEJA DIAMANTE NA SEASON 9!” é um ebook para jogadores de League of Legends que desejam sair do “EloHell” e alcançar novos patamares na Temporada 9.<br><br>
 Os ensinamentos contidos nesse material te levarão a outra realidade de jogo, te dando a possiblidade de jogar com streamers e jogadores profissionais, além de jogar campeonatos e carregar aquela equipe de amigos que parecia incarregável.<br><br>
-O ebook possui mais de 25 tópicos com conteúdo tanto técnico quanto prático, de como pensar, de como pensar, se comportar e jogar League of Legends com maestria.</p>
+O ebook possui mais de 25 tópicos com conteúdo tanto técnico quanto prático, de como pensar, se comportar e jogar League of Legends com maestria.</p>
 				<a class="btn btn-padrao btn-primary mb-5" href="https://pay.hotmart.com/O10291047U" target="_blank">Comprar ebook agora</a>
 			</div>
 			</div>
