--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ O ebook possui mais de 25 tópicos com conteúdo tanto técnico quanto prático,
 	<section class="faca-agora text-center">
 		<div class="container">
 			<h2 class="mb-4"><b>FAÇA AGORA MESMO A LEITURA DO<br> "SEJA DIAMANTE NA SEASON 9!"</b></h2>
-			<p>Simplismente "devore" o livro, pois pode ter certeza de que ele mudará completamente sua forma de jogar League of Legends!</p>
+			<p>Simplesmente "devore" o livro, pois pode ter certeza de que ele mudará completamente sua forma de jogar League of Legends!</p>
 			<a class="btn btn-primary btn-padrao" href="https://pay.hotmart.com/O10291047U" target="_blank">
 				COMPRAR "SEJA DIAMANTE NA SEASON 9!"
 			</a>
